# Cutout

./: .gitignore  README.md  index.html  install.sh  package-lock.json  package.json  vite.config.ts
docs/: index.html
docs/superpowers/specs/: 2026-07-12-in-app-logo-design.md
helper/: build-helper.sh  vision-bg-remove.swift
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: CompareSlider.tsx  Editor.tsx  QueueItemCard.tsx
src/lib/: api.ts
