[package]
name = "cutout"
version = "1.0.0"
description = "On-device image background removal using Apple's Vision framework"
authors = ["fcatus"]
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"

[profile.release]
opt-level = 2
strip = true
panic = "abort"
